tests/negative/gold/deprecation-test.gold
tests/negative/deprecation-test.toit:94:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/deprecation-test.toit:5:1: warning: Deprecated library. For testing
import .deprecation-lib
^~~~~~~~~~~~~~~~~~~~~~~
tests/negative/deprecation-test.toit:6:1: warning: Deprecated library. For testing
import .deprecation-lib show foo
^~~~~~~~~~~~~~~~~~~~~~~
tests/negative/deprecation-test.toit:74:17: warning: Class 'Deprecated' is deprecated. Do something else instead
  deprecated := Deprecated
                ^~~~~~~~~~
tests/negative/deprecation-test.toit:75:28: warning: Class 'Deprecated' is deprecated. Do something else instead
  deprecated2 := Deprecated.named
                           ^
tests/negative/deprecation-test.toit:79:8: warning: Deprecated constructor of 'A'. With `code` in it
  a := A
       ^
tests/negative/deprecation-test.toit:82:5: warning: Deprecated 'A.method1'. Used 'method2' instead
  a.method1
    ^~~~~~~
tests/negative/deprecation-test.toit:85:5: warning: Deprecated 'A.some-field'. Use something else
  a.some-field
    ^~~~~~~~~~
tests/negative/deprecation-test.toit:87:4: warning: Deprecated 'A.some-static-field'. Just don't
  A.some-static-field
   ^
tests/negative/deprecation-test.toit:89:3: warning: Deprecated 'global'. Find something else
  global
  ^~~~~~
tests/negative/deprecation-test.toit:91:3: warning: Deprecated 'fun'. Use 'bar' instead
  fun
  ^~~
Compilation failed
